Add start of background process.  Add system config data and api layers for fetch
